Fixed half box and removed horizontal scroll bar

--- a/src/index.css
+++ b/src/index.css
@@ -43,18 +43,19 @@ a:focus {
 
 .halfdiv {
   width: 50%;
-  height: 100vh;
+  height: 95vh;
   padding: 25px;
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 .halfdivalt {
   background-color: rgba(240, 248, 255, 0.9);
   width: 50%;
-  height: 100%;
-  position: absolute;
+  height: 100vh;
+  position: relative;
   margin-right: 0px;
-  margin-left: 50%;
+  margin-left: auto;
 }
 
 .codeblock {
